fix: remove auto added husky task
this was removed so that
up to date, audited 406 packages in 684ms

188 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities would stop failing

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
-        "preview": "vite preview",
-        "prepare": "husky"
+        "preview": "vite preview"
     },
     "lint-staged": {
         "*.{ts,tsx}": [
